--- a/1.小程序/02.代码/wechat-init/app.json
+++ b/1.小程序/02.代码/wechat-init/app.json
@@ -4,10 +4,10 @@
     "pages/logs/logs"
   ],
   "window":{
-    "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#0ff",
+    "navigationBarTitleText": "atguigu",
+    "navigationBarTextStyle":"black",
+    "navigationStyle": "default"
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
