--- a/1.小程序/02.代码/wechat-init/project.config.json
+++ b/1.小程序/02.代码/wechat-init/project.config.json
@@ -39,9 +39,9 @@
         "minifyWXML": true
     },
     "compileType": "miniprogram",
-    "libVersion": "2.19.4",
+    "libVersion": "2.19.6",
     "appid": "wxe5931a68ea66cece",
-    "projectname": "wechat-init",
+    "projectname": "wechat-init123",
     "debugOptions": {
         "hidedInDevtools": []
     },
