--- a/1.小程序/02.代码/demo/app.json
+++ b/1.小程序/02.代码/demo/app.json
@@ -2,8 +2,9 @@
     "pages": [
         "pages/index/index"
     ],
-    "window":{
+    "window": {
         "navigationBarBackgroundColor": "#f0f",
         "navigationBarTitleText": "atguigu"
-    }
+    },
+    "sitemapLocation": "sitemap.json"
 }
