--- a/1.小程序/02.代码/demo/app.json
+++ b/1.小程序/02.代码/demo/app.json
@@ -7,5 +7,16 @@
         "navigationBarBackgroundColor": "#f0f",
         "navigationBarTitleText": "atguigu"
     },
+    "plugins": {
+        "citySelector": {
+            "version": "1.0.1",
+            "provider": "wx63ffb7b7894e99ae"
+        }
+    },
+    "permission": {
+        "scope.userLocation": {
+            "desc": "你的位置信息将用于小程序定位"
+        }
+    },
     "sitemapLocation": "sitemap.json"
 }
