--- a/1.小程序/02.代码/硅谷云音乐/app.json
+++ b/1.小程序/02.代码/硅谷云音乐/app.json
@@ -1,5 +1,6 @@
 {
     "pages": [
+        "pages/login/login",
         "pages/personal/personal",
         "pages/index/index",
         "pages/video/video"
@@ -12,22 +13,22 @@
     "tabBar": {
         "color": "#333",
         "selectedColor": "#d43c33",
-        "list":[
+        "list": [
             {
                 "pagePath": "pages/index/index",
-                "text":"首页",
+                "text": "首页",
                 "iconPath": "/static/images/tabs/tab-home.png",
                 "selectedIconPath": "/static/images/tabs/tab-home-current.png"
             },
             {
                 "pagePath": "pages/video/video",
-                "text":"视频",
+                "text": "视频",
                 "iconPath": "/static/images/tabs/select.png",
                 "selectedIconPath": "/static/images/tabs/selected.png"
             },
             {
                 "pagePath": "pages/personal/personal",
-                "text":"我的",
+                "text": "我的",
                 "iconPath": "/static/images/tabs/tab-my.png",
                 "selectedIconPath": "/static/images/tabs/tab-my-current.png"
             }
