51.个人播放记录实现(重写Page函数)

--- a/1.小程序/02.代码/硅谷云音乐/app.json
+++ b/1.小程序/02.代码/硅谷云音乐/app.json
@@ -28,7 +28,7 @@
             },
             {
                 "pagePath": "pages/personal/personal",
-                "text": "我的",
+                "text": "个人中心",
                 "iconPath": "/static/images/tabs/tab-my.png",
                 "selectedIconPath": "/static/images/tabs/tab-my-current.png"
             }
