--- a/1.小程序/02.代码/硅谷云音乐/app.json
+++ b/1.小程序/02.代码/硅谷云音乐/app.json
@@ -13,6 +13,7 @@
         "navigationBarTextStyle": "white",
         "enablePullDownRefresh": false
     },
+    "requiredBackgroundModes": ["audio"],
     "tabBar": {
         "color": "#333",
         "selectedColor": "#d43c33",
