76.song页面进度条功能实现

--- a/1.小程序/02.代码/硅谷云音乐/app.json
+++ b/1.小程序/02.代码/硅谷云音乐/app.json
@@ -11,6 +11,7 @@
         "navigationBarBackgroundColor": "#d43c33",
         "navigationBarTitleText": "硅谷云音乐",
         "navigationBarTextStyle": "white",
+        "navigationStyle": "default",
         "enablePullDownRefresh": false
     },
     "requiredBackgroundModes": ["audio"],
