--- a/1.小程序/02.代码/硅谷云音乐/app.json
+++ b/1.小程序/02.代码/硅谷云音乐/app.json
@@ -47,6 +47,12 @@
             "independent": true
         }
     ],
+    "preloadRule":{
+        "pages/index/index":{
+            "packages":["songs"],
+            "network":"all"
+        }
+    },
     "style": "v2",
     "sitemapLocation": "sitemap.json"
 }
