--- a/2.uniapp/01.代码/uniapp-server/package.json
+++ b/2.uniapp/01.代码/uniapp-server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "flyio": "^0.6.14",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1"
   }
